# rust_api

./: .env  Cargo.toml  actix-web-service-127.0.0.1:8080.http  db.sqlite
migrations/: 20230101000000_create_users_table.sql
src/: config.rs  db.rs  logging.rs  main.rs  models.rs  routes.rs
src/handlers/: auth.rs  mod.rs  test.rs  users.rs
src/middleware/: auth.rs
src/utils/: jwt.rs  password.rs
