[package]
name = "rust-jwt-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "sqlite"] }
jsonwebtoken = "9.1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
argon2 = "0.5.2"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
futures = "0.3"
rand = "0.8"

# Залежності для логування
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"
time = { version = "0.3.41", features = ["local-offset"] }